--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "DevOZ - Tech test",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.ts",
+        "dev": "nodemon",
         "test": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.spec.ts' --exit",
         "test:watch": "npm run test -- --watch",
         "lint": "eslint . --ext .ts",
@@ -24,7 +24,9 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.3",
         "passport": "^0.7.0",
-        "passport-jwt": "^4.0.1"
+        "passport-jwt": "^4.0.1",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
@@ -34,20 +36,22 @@
         "@types/jsonwebtoken": "^9.0.7",
         "@types/mocha": "^10.0.2",
         "@types/node": "^20.8.0",
+        "@types/passport": "^1.0.17",
         "@types/passport-jwt": "^4.0.1",
         "@types/reflect-metadata": "^0.1.0",
         "@types/sinon": "^10.0.17",
         "@types/supertest": "^2.0.13",
+        "@types/swagger-jsdoc": "^6.0.4",
         "eslint": "^9.15.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.12.0",
         "mocha": "^10.2.0",
-        "nodemon": "^3.0.1",
+        "nodemon": "^3.1.7",
         "prettier": "^3.3.3",
         "sinon": "^16.0.0",
         "supertest": "^6.3.3",
-        "ts-node": "^10.9.1",
+        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.15.0"
