--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "license": "ISC",
     "dependencies": {
         "@faker-js/faker": "^8.1.0",
+        "@googlemaps/google-maps-services-js": "^3.4.0",
         "@typegoose/typegoose": "^11.5.0",
         "bcryptjs": "^2.4.3",
         "chai": "^4.3.10",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
