--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "dev": "nodemon",
         "test": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.spec.ts' --exit",
         "test:watch": "npm run test -- --watch",
-        "lint": "eslint . --ext .ts",
-        "format": "prettier --write ."
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
     },
     "author": "",
     "license": "ISC",
@@ -20,15 +20,18 @@
         "chai": "^4.3.10",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.3",
+        "morgan": "^1.10.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "winston": "^3.17.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
@@ -37,6 +40,7 @@
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/mocha": "^10.0.2",
+        "@types/morgan": "^1.9.9",
         "@types/node": "^20.8.0",
         "@types/passport": "^1.0.17",
         "@types/passport-jwt": "^4.0.1",
@@ -44,13 +48,18 @@
         "@types/sinon": "^10.0.17",
         "@types/supertest": "^2.0.13",
         "@types/swagger-jsdoc": "^6.0.4",
-        "eslint": "^9.15.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
+        "@typescript-eslint/eslint-plugin": "^5.59.11",
+        "@typescript-eslint/parser": "^5.59.11",
+        "axios": "^1.7.7",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "globals": "^15.12.0",
         "mocha": "^10.2.0",
         "nodemon": "^3.1.7",
-        "prettier": "^3.3.3",
+        "prettier": "^2.8.8",
         "sinon": "^16.0.0",
         "supertest": "^6.3.3",
         "ts-node": "^10.9.2",
