Update TypeScript and ESLint configurations for improved compatibility and structure

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.spec.ts' --exit",
         "test:watch": "npm run test -- --watch",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
+        "format": "prettier --write \"src/**/*.ts\""
     },
     "author": "",
     "license": "ISC",
@@ -29,6 +29,7 @@
         "morgan": "^1.10.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "winston": "^3.17.0"
@@ -37,6 +38,7 @@
         "@eslint/js": "^9.15.0",
         "@types/bcryptjs": "^2.4.6",
         "@types/chai": "^4.3.6",
+        "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/mocha": "^10.0.2",
@@ -48,12 +50,15 @@
         "@types/sinon": "^10.0.17",
         "@types/supertest": "^2.0.13",
         "@types/swagger-jsdoc": "^6.0.4",
-        "@typescript-eslint/eslint-plugin": "^5.59.11",
-        "@typescript-eslint/parser": "^5.59.11",
+        "@types/swagger-ui-express": "^4.1.7",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "@typescript-eslint/parser": "^5.62.0",
         "axios": "^1.7.7",
-        "eslint": "^8.46.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.29.1",
+        "eslint-import-resolver-node": "^0.3.9",
+        "eslint-import-resolver-typescript": "^3.6.3",
+        "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-unused-imports": "^2.0.0",
         "globals": "^15.12.0",
