--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "strictPropertyInitialization": false,
     "target": "es2020",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
+    "module": "commonjs",
+    "lib": ["ES2020"],
     "baseUrl": ".",
     "paths": {
       "@controllers/*": ["src/controllers/*"],
@@ -15,6 +23,7 @@
       "@middlewares/*": ["src/middlewares/*"]
     }
   },
+  "include": ["src/**/*.ts"],
   "types": ["reflect-metadata", "mocha"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
