Add path alias for @app/* to tsconfig.json for improved module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "lib": ["ES2020"],
     "baseUrl": ".",
     "paths": {
+      "@app/*": ["src/*"],
       "@controllers/*": ["src/controllers/*"],
       "@services/*": ["src/services/*"],
       "@models/*": ["src/models/*"],
