--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "nodemon",
         "test": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.spec.ts' --exit",
+        "test:e2e": "mocha -r ts-node/register -r tsconfig-paths/register 'src/**/*.e2e.test.ts' --exit",
         "test:watch": "npm run test -- --watch",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\""
