--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - mongo-data:/data/db
+    networks:
+      - app-network
 
   app:
     container_name: oz-tech-test-app
@@ -25,8 +27,6 @@ services:
       - '3000:3000'
       - '9229:9229'
     command: npm run dev
-    env_file:
-      - .env
     depends_on:
       - mongo
     networks:
