Add watch mode and file configuration to Mocha settings for improved test development

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -4,5 +4,9 @@
         "tsconfig-paths/register"
     ],
     "spec": "src/**/*.spec.ts",
-    "exit": true
+    "exit": true,
+    "watch": true,
+    "watch-files": [
+        "src/**/*.ts"
+    ]
 }
