Increase Mocha test timeout to 10 seconds for improved stability

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -4,6 +4,7 @@
         "tsconfig-paths/register"
     ],
     "spec": "src/**/*.spec.ts",
+    "timeout": 10000,
     "exit": true,
     "watch": true,
     "watch-files": [
