--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon",
-        "test": "mocha",
-        "test:watch": "mocha --config .mocharc.json --watch",
+        "test": "mocha --config .mocharc.unit.json",
+        "test:watch": "mocha --config .mocharc.unit.json --watch",
+        "test:e2e": "mocha --config .mocharc.e2e.json",
+        "test:e2e:watch": "mocha --config .mocharc.e2e.json --watch",
         "test:cov": "nyc mocha",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\""
