--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test:watch": "mocha --config .mocharc.unit.json --watch",
         "test:e2e": "mocha --config .mocharc.e2e.json",
         "test:e2e:watch": "mocha --config .mocharc.e2e.json --watch",
-        "test:cov": "nyc mocha",
+        "test:cov": "nyc mocha --config .mocharc.unit.json",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\""
     },
@@ -69,6 +69,7 @@
         "mocha": "^10.8.2",
         "mongodb-memory-server": "^10.1.2",
         "nodemon": "^3.1.7",
+        "nyc": "^17.1.0",
         "prettier": "^2.8.8",
         "sinon": "^16.1.3",
         "supertest": "^6.3.4",
